plugins {
	id 'java'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
}

springBoot {
    buildInfo()
}

group = 'com.th3hero'
sourceCompatibility = 17
version = '1.0.0'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
    maven {
      name 'm2-dv8tion'
      url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    // Spring
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: "${springBootVersion}"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${springBootVersion}"
    // JDA
    implementation group: 'net.dv8tion', name: 'JDA', version: "${jdaVersion}"
    // JavaX
    implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: "${hibernateVersion}"
    // DB
    runtimeOnly group: 'org.postgresql', name: 'postgresql', version: "${postgreSQLVersion}"
	runtimeOnly group: 'org.flywaydb', name: 'flyway-core', version: "${flywayVersion}"
    // Lombok
	compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
    // Other
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: "${apacheCommonVersion}"
    // Test Dependencies
    testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoVersion}"
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: "${junitVersion}"
    testImplementation group: 'org.assertj', name: 'assertj-core', version: "${assertjVersion}"
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
    testImplementation group: 'org.testcontainers', name: 'postgresql', version: "${testContainersVersion}"
}

test {
	useJUnitPlatform()
}
